BinomskaKopica (no remove and removeFirst; extra consolidation in comments), BinomskaKopica tests (no remove and removeFirst). | 100% coverage